# spacenav-ws

./: Dockerfile  diagram.wsd  docker-compose.yaml  listener.py  main.py  pyproject.toml  readme.md  requirements.txt
examples/: har_part_handshake.json  har_part_top_tap.json
junk/: examples.json
nginx/: default.conf  nginx.conf
nginx/certs/: nginx-selfsigned.crt  nginx-selfsigned.key
src/spacenav_ws/: event.py  main.py
src/spacenav_ws/templates/: test_ws.html
